# Calculator

./: CMakeLists.txt  Makefile  README.md  calculator  donusum1.c  donusum1.h  donusum2.c  donusum2.h  donusum3.c  donusum3.h  donusum_types.h  exponentfile2.c  exponentfile2.h  exponentfile3.c  exponentfile3.h  exponentfunc1.h  exponentwrappper.c  factorfile1.c  factorfile1.h  factorfile2.c  factorfile2.h  factorfile3.c  factorfile3.h  file1.c  file1.h  file2.c  file2.h  file3.c  file3.h  hvl2.h  istatistik1.c  istatistik1.h  istatistik2.c  istatistik2.h  istatistik3.c  istatistik3.h  test.c  wrapper.c
